<resources>
    <string name="app_name">MyAnimations</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="increase_square_size">Increase square size</string>
    <string name="developer_info">Developer: Viktor Matskevich\nviktor.matskevich@sy-dev.com</string>
    <string name="bytepace">BYTEPACE</string>
    <string name="select_animation_in_menu">Select animation in menu</string>
    <string name="your_text">Your text</string>
    <string name="transition_square">Transition square</string>
    <string name="move_square">Move square</string>
    <string name="other_animations">Other animations</string>
    <string name="slide">Slide</string>
    <string name="icon_of_contacts">Icon of contacts</string>
    <string name="contact_sync">Contact Sync</string>
    <string name="contact_sync_by_ramonition">Contact Sync by Ramotion</string>
    <string name="connect_contacts">Connect Contacts</string>
    <string name="connect_contacts_description">All your phone Contacts will be automatically added to your friends list</string>
    <string name="unlock">Unlock</string>
    <string name="simple_animations">Simple animations</string>
    <string name="lock_this_screen">LOCK THIS SCREEN</string>
    <string name="zoom_image">Zoom image</string>
    <string name="zoom_image_screen">Zoom image screen</string>
    <string name="allow_discovery">Allow Discovery</string>
    <string name="card_2_about">Turn on to allow you phone number to be displayed in your friends Contacts</string>
    <string name="shake_an_object">Shake an object</string>
    <string name="custom_progress_bar">Custom progress bar</string>
    <string name="start">Start</string>
    <string name="falling_objects">Falling objects</string>
</resources>
